developerProject/force-app/main/default/objects/OJ_PM__Business_Process__c/fields/OJ_PM__Description__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Description__c</fullName>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>