developerProject/force-app/main/default/objects/OJ_PM__Business_Process__c/fields/OJ_PM__Host_Namespace__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Host_Namespace__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_270, FIND(&quot;.com/&quot;,$Api.Partner_Server_URL_270)+3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host Namespace</label>
    <type>Text</type>
</CustomField>