developerProject/force-app/main/default/objects/OJ_PM__Business_Process__c/fields/OJ_PM__Master_Object__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Master_Object__c</fullName>
    <label>Master Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>